# flood-risk-prediction

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/_workflows_pending_scope/: ci.yml
configs/: default.yaml
src/flood/: __init__.py  cli.py  data.py  train.py  unet.py
tests/: test_data.py  test_train_smoke.py  test_unet.py
